--- a/AppSatrack/AppSatrack.Cross/AppSatrack.Cross/Views/AlarmDetailPage.xaml
+++ b/AppSatrack/AppSatrack.Cross/AppSatrack.Cross/Views/AlarmDetailPage.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              Title="Detalle"
+             BindingContext="{Binding Main, Source={StaticResource Locator}}"
              x:Class="AppSatrack.Cross.Views.AlarmDetailPage">
 
 
@@ -22,8 +23,8 @@
 
           <Grid BackgroundColor="Yellow" Grid.Column="0">
             <StackLayout>
-              <Label Text="Abandono de la region"></Label>
-              <Label Text="Placa: SLI192"></Label>
+              <Label Text="{Binding SelectedAlarm.Evento}"></Label>
+              <Label Text="{Binding SelectedAlarm.Placa}"></Label>
             </StackLayout>
           </Grid>
           <Grid BackgroundColor="White" Grid.Column="1">
