Implementacion de pagina con alarma seleccionada

--- a/AppSatrack/AppSatrack.Cross/AppSatrack.Cross/Views/MainPage.xaml
+++ b/AppSatrack/AppSatrack.Cross/AppSatrack.Cross/Views/MainPage.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              BindingContext="{Binding Main, Source={StaticResource Locator}}"
-             x:Class="AppSatrack.Cross.Views.MainPage" Title=""  >
+             x:Class="AppSatrack.Cross.Views.MainPage" Title="Alarmas"  >
 
   <Grid>
     <ListView x:Name="lstAlarms" HasUnevenRows="True" ItemsSource="{Binding Alarms}" >
